Some updates for home and base

--- a/home_app/static/styles.css
+++ b/home_app/static/styles.css
@@ -1,35 +1,58 @@
+* {
+    box-sizing :border-box;
+    margin: 0;
+    background: black;
+}
 .navbar{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    position: absolute; 
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%; 
     z-index: 10; 
     background: transparent; 
     color: white;
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0));
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
     padding: 20px;
+}
+.logo {
+    background: transparent;
 }
 .logo img{
     align-items: center;
     margin-left: 50px;
-    height: 80px;
-    width: auto;
-    max-width: 100%;
+    width: 100%;
+    max-width:150px;
+    height: auto;
+    background: transparent;
     
 }
 .navbar-items{
     display: flex;
     list-style: none;
     gap: 20px;
-    border-right: 1px solid #999999;
+    background: transparent;
+}
+.navbar-item {
+    background: transparent;
 }
 .navbar-items a{
     text-decoration: none;
     color: #fff;
     align-items: center;
+    background: transparent;
+    border-bottom: 2px solid transparent;
+    transition: color 0.4s ease;
+}
+.navbar-items .navbar-item a.active {
+    color: #b1995f; 
+    border-bottom: 2px solid #b1995f; 
+}
+.navbar-items .navbar-item a:hover {
+    color: #b1995f;  
+    transform: scale(1.2);
 }
 
 .burger-button {
@@ -38,16 +61,12 @@
     color: white;
     cursor: pointer;
     margin-right: 20px;
+    background: transparent;
 }
-.navbar-items a:hover {
-    color: #b1995f;
+.burger-button i{
+    background: transparent;
 }
 
-.navbar-items a.active {
-    color: #b1995f;
-    border-bottom: 2px solid #b1995f;
-    box-sizing: border-box;
-}
 @media (max-width : 53rem) {
     .navbar-items{
         display: none;
@@ -58,27 +77,24 @@
 }
 /* Carousel css start */
 
-* {
-    box-sizing :border-box;
-    margin: 0;
-    padding: 0;
-}
+
 
 .mySlides{
     display: none;
+    margin: none;
+    height: 100vh;
 }
 
 
 .carousel-container{
     position: relative;
-    margin: auto;
-
+    width: 100%;
 }
 
 .carousel-container img{
     width: 100%;
     height: 100vh;   
-    object-fit: cover;  
+    object-fit: fill;  
 }
 
 
@@ -95,6 +111,7 @@
     transition: 0.6s ease;
     border-radius: 0 3px 3px 0;
     user-select: none;
+    background: transparent;
 }
 
 .carousel-button-next {
@@ -114,6 +131,7 @@
     transform: translate(-50%, -50%);
     text-align: center;
     color: white;
+    background: transparent;
 }
 .first-title {
     font-size: 1.5rem;
@@ -122,6 +140,11 @@
     color: #b1995f;
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
     font-style: italic;
+    background: transparent;
+    transform: translateX(0);
+}
+.first-title, .second-title{
+    transition: transform 0.5s ease-in-out;
 }
 .second-title{
     font-size: 4rem;
@@ -129,5 +152,31 @@
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
     font-style: italic;
     color: #ceac5e;
+    background: transparent;    
+    transform: translateX(0);
+}
+.custom-line{
+    height: 5px;
+}
+/* about-us section */
 
+.about-us{
+
+    background-color: #b1995f;
+}
+.about-us-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 20px;
+}
+.photo-about-us {
+    background-size: auto 100%;
+    background-position: center;
+    height: 100vh;
+    width: 100%;
+    background-repeat: no-repeat;
+}
+.text-about-us{
+    color: white;
 }
