--- a/home_app/templates/home.html
+++ b/home_app/templates/home.html
@@ -7,15 +7,15 @@
         </div>
 
         <div class="mySlides">
-            <img src="{% static 'img/home_page1.png' %}" alt="Home image 2"  style="width: 100%;">
+            <img src="{% static 'img/home_page2.jpg' %}" alt="Home image 2"  style="width: 100%;">
         </div>
 
         <div class="mySlides">
-            <img src="{% static 'img/home_page3.png' %}" alt="Home image 3"  style="width: 100%;">
+            <img src="{% static 'img/home_page3.JPG' %}" alt="Home image 3"  style="width: 100%;">
         </div>
 
         <div class="mySlides">
-            <img src="{% static 'img/home_page4.png' %}" alt="Home image 4"  style="width: 100%;">
+            <img src="{% static 'img/home_page5.png' %}" alt="Home image 4"  style="width: 100%;">
         </div>
 
         <div class="middle-title-carousel">
@@ -28,11 +28,15 @@
     
     </div>
     <div class="about-us">
-        <div class="photo-about-us" style="background-image: url(/MyBistro/home_app/static/img/);">
-            <div class="text-about-us">
+        <hr class="custom-line">
+        <div class="about-us-container">
+            <div class="photo-about-us" style="background-image: url(/static/img/about_us_photo.jpg);">
+                <div class="text-about-us">
+                    <h2>About us</h2>
+                    <p>Cu o pasiune arzătoare pentru cucina italiana, vă prezentăm cu mândrie Locanda del Corso - o destinație culinară iconică din inima Timișoarei. Având o prezență solidă în industria HORECA timp de peste un deceniu, acest restaurant a unit pasionații de gastronomie în Piața Unirii din 2013, oferind un cadru relaxat, îmbinat cu o notă subtilă de rafinamen</p>
+                </div>
             </div>
         </div>
-
     </div>
     <script src="{% static 'scripts.js' %}"></script>
 {% endblock %}
