--- a/home_app/templates/base.html
+++ b/home_app/templates/base.html
@@ -7,7 +7,7 @@
     <title>Terra Bistro</title>
     <link rel="stylesheet" href="{% static 'styles.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"><!--for the hamburger icon-->
-    <link rel="icon" type="image/x-icon" href="{% static 'img/Terra_logo.ico' %}"> <!-- icon for tab-->
+    <link rel="icon" type="image/x-icon" href="{% static 'img/Terra_icon.ico' %}"> <!--icon for tab-->
 
 </head>
 
@@ -20,7 +20,7 @@
 
         <ul class="navbar-items">
             <li class="navbar-item">
-                <a href="">Home</a>
+                <a href="{% url 'home' %}" class="{% if request.path == '/' %}active{% endif %}">Home</a>
             </li>
 
             <li class="navbar-item">
