--- a/home_app/templates/base.html
+++ b/home_app/templates/base.html
@@ -24,7 +24,7 @@
             </li>
 
             <li class="navbar-item">
-                <a href="">Menu</a>
+                <a href="{% url 'menu'%}" class="{% if request.path == '/menu/' %}active{% endif %}">Menu</a>
             </li>
 
             <li class="navbar-item">
