Create a new branch for location_app

--- a/home_app/templates/base.html
+++ b/home_app/templates/base.html
@@ -28,7 +28,7 @@
             </li>
 
             <li class="navbar-item">
-                <a href="">Location</a>
+                <a href="{% url 'location' %}" class="{% if request.path == '/location/' %}active{% endif %}">Location</a>
             </li>
 
             <li class="navbar-item">
