--- a/home_app/templates/home.html
+++ b/home_app/templates/home.html
@@ -33,7 +33,11 @@
             <div class="photo-about-us" style="background-image: url(/static/img/about_us_photo.jpg);">
                 <div class="text-about-us">
                     <h2>About us</h2>
-                    <p>Cu o pasiune arzătoare pentru cucina italiana, vă prezentăm cu mândrie Locanda del Corso - o destinație culinară iconică din inima Timișoarei. Având o prezență solidă în industria HORECA timp de peste un deceniu, acest restaurant a unit pasionații de gastronomie în Piața Unirii din 2013, oferind un cadru relaxat, îmbinat cu o notă subtilă de rafinamen</p>
+                    <p>Located in the heart of Baia Mare, Terra Bistro is where a passion for gastronomy meets elegance and comfort. We take pride in offering a diverse menu that blends local flavors with international dishes, all prepared with fresh, high-quality ingredients.
+
+                        Every dish is carefully crafted by our talented chefs to provide a memorable dining experience. With a welcoming atmosphere and impeccable service, Terra Bistro is the perfect destination for any special occasion.
+                        
+                        We invite you to visit us and discover the authentic taste and refinement of Terra Bistro, where every meal becomes an unforgettable experience!</p>
                 </div>
             </div>
         </div>
