--- a/home_app/templates/base.html
+++ b/home_app/templates/base.html
@@ -44,13 +44,48 @@
             <i class="fa-solid fa-bars"></i>
         </div>
 
+        
+
     </nav>
 
     {% block content%}
 
     {% endblock%}
 
-    <footer>
+    <footer class="container-footer" >
+        <div class="container-informations">
+            
+            <div class="col">
+                <p>Life happens, coffee helps</p>
+            </div>
+
+            <div class="col">
+                <h2>Opening Hours</h2>    
+                <!-- <div class="info">
+                    <i class="fa-solid fa-phone"></i> 
+                    <span>+40 123 456 789</span> 
+                </div>--> 
+                <div class="info">
+                    <!-- <i class="fa-solid fa-clock"></i>  -->
+                    <span>Mon-Fri: 8:00 - 15:30</span>
+                </div>
+            </div>
+
+            <div class="col">
+                <h2>Descover us</h2>
+                <ul>
+                    <li><a href="/location/">Strada Hortensiei 2, Baia Mare 430294</a></li>
+                    <li><a href="/gallery/">Gallery</a></li>
+                </ul>
+            </div>
+        
+
+            <div class="col">
+                <h2>Follow Us</h2>
+                <a href="#" class="icon"><i class="fa-brands fa-instagram"></i></a>
+                <a href="#" class="icon"><i class="fa-brands fa-facebook"></i></a> 
+            </div>
+        </div>
     </footer>
 </body>
 </html>
